manifests/hello-first/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-first
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-first
  template:
    metadata:
      labels:
        app: hello-first
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.5
        ports:
        - containerPort: 8080
