manifests/hello-first/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-first
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-first
