manifests/hello-first/ingress-nginx.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-first-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: first.hello.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-first
          servicePort: 80
